Replace UniqueTable by Guava Interner.